feat(dashboard): public floor — anonymous degrades to curated PUBLIC tiles (close fail-open)
Anonymous/no-role requests previously fell to UNRESTRICTED tenant data (every
visibleTo:[] tile, incl. the at-risk table's assignee UUIDs) — the service treated
null userInfo as 'no ceiling => visible'. Implements the design's deliberate
degrade-to-public-floor (70-view-management 'Public (no login)') instead:

- AnalyticsService.extractRoles: anonymous (no userInfo / no roles) -> {PUBLIC}, not
  empty set. Public floor may only query published KPIs whose rbac.visibleTo lists
  PUBLIC, and may NOT run inline (non-kpiId) queries (bypasses the catalog's PUBLIC
  opt-in + publish-time PII check). Tenant-aggregate scope still applies.
- KpiDefinition.isVisibleTo: PUBLIC caller sees a tile only if visibleTo contains
  PUBLIC; for authenticated callers PUBLIC is an ADDITIVE marker (stripped before the
  role-ceiling check) so tagging a tile PUBLIC never narrows who else can see it.
- Catalog: tag 10 aggregate, no-PII tiles PUBLIC (open/resolved/new counts, resolution
  & reopen rate, CSAT, by-type, over-time, dept-resolution, ward map). Pins, at-risk
  (assignee), and all ep_/er_ officer tiles stay non-public.
- cl_chart_department_resolution_rate window wtd -> last_30d (was empty on the demo
  data's week-to-date; supervisors saw 'No data').

Verified (rbac-test.sh, 17/17): anonymous sees public aggregates, blocked from
assignee-PII / officer / inline / pins; authenticated unchanged; supervisor's dept
resolution rate now renders.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>